genre and artists fixed, pictures wrap, containers, buttons, sizes

--- a/app/assets/stylesheets/components/_genres.scss
+++ b/app/assets/stylesheets/components/_genres.scss
@@ -26,50 +26,60 @@
   line-height: 57.6px;
 }
 
-.genre-artists {
-  display: flex;
-  flex-flow: row wrap;
-  overflow: auto;
-  max-width: 100%;
-  justify-content: space-around;
-}
-
-
-
-.genre-artist {
-    line-height: 1.3em;
-    text-align: center;
-
-}
-
-.genre-artist a:hover {
-
-}
-
-.genre-card {
-  display: flex;
-  flex-direction: column;
+.genre-artist{
+  line-height: 1.3em;
   text-align: center;
-  margin: 0.5em;
-  max-width: 6em;
+  padding-right: 10%;
+  padding-left: 10%;
 }
 
-.genre-card:hover {
-  opacity: 0.8;
-}
+.tab-pane{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.genre-card img {
-  height: 5em;
-  width: 5em;
-  margin-bottom: 0.5em;
-  border-radius: 100%;
-}
+    .genre-artists {
+      display: flex;
+      flex-flow: row wrap;
+      overflow: auto;
+      padding-left: 20%;
+      padding-right: 20%;
+      justify-content: space-around;
+    }
 
-.genre-card a {
-  font-weight: 500;
-  text-decoration: none;
-  color: #404040;
-}
+    .genre-artist a:hover {
+
+    }
+
+    .genre-card {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      margin: 0.5em;
+      max-width: 6em;
+
+      img {
+        height: 5em;
+        width: 5em;
+        margin-bottom: 0.5em;
+        border-radius: 100%;
+      }
+
+       a {
+        font-weight: 500;
+        text-decoration: none;
+        color: #404040;
+
+        img{
+          object-fit: cover;
+        }
+      }
+    }
+
+    .genre-card:hover {
+      opacity: 0.8;
+    }
+  }
 
 
 .genre-show{
@@ -127,4 +137,21 @@
 #pills-tabContent {
   max-width: 100%;
   max-height: 100%;
+}
+
+
+.genre-show{
+    #pills-home{
+      margin: auto;
+    }
+
+    #pills-profile{
+      display:block;
+    }
+}
+
+.transparent-button{
+  background: rgba(255, 255, 255, 0);
+  border: none;
+  padding: 0;
 }
